@startuml
'https://plantuml.com/class-diagram

interface IListennerATM {
    boolean kiemTraSoDu(int withdrawal)
    void nhanThongBao(boolean qualified, int withdrawal)
}

class ATM {

}

class ATM {
    IListennerATM tk;
    void login(IListennerATM iListennerATM)
    void logout(IListennerATM iListennerATM)
    boolean kiemTraRutTien(int withdrawal)
    void rutTien(int withdrawal)
}

class TaiKhoan {
    int soDu;
    void login(ATM atm)
    void logout(ATM atm)
    void nhanThongBao(boolean qualified, int withdrawal)
}

IListennerATM <|.. TaiKhoan
IListennerATM <-- ATM:tk
TaiKhoan --> ATM:atm

@enduml